Added authorization for library applicatio
