# libraryClient/src/main/java/com/example/library/controllers/CityController.java
@@ -14,6 +14,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
@@ -93,10 +94,11 @@ public class CityController {
 	
 	@PostMapping
 	@ResponseBody
-	public CityDto createCity(@RequestBody CityDto newCityDto) {
+	public CityDto createCity(@RequestBody CityDto newCityDto, @RequestHeader("Authorization") String auth) {
 		City city = modelMapper.map(newCityDto, City.class);
 		City newCity;
 		try {
+			cityApi.getApiClient().addDefaultHeader("Authorization", auth);
 			newCity = cityApi.createCity(city);
 			return modelMapper.map(newCity, CityDto.class);
 		} catch (ApiException e) {
@@ -109,8 +111,9 @@ public class CityController {
 	
 	@DeleteMapping(path = "/{id}", produces = "application/json")
 	@ResponseBody
-    public String deleteCity(@PathVariable int id) {
+    public String deleteCity(@PathVariable int id, @RequestHeader("Authorization") String auth) {
 		try {
+			cityApi.getApiClient().addDefaultHeader("Authorization", auth);
 			cityApi.deleteCity1(id);
 		} catch (ApiException e) {
 			// TODO Auto-generated catch block
@@ -122,10 +125,11 @@ public class CityController {
 	
 	@PutMapping(path="/{id}", produces = "application/json")
 	@ResponseBody
-	public CityDto updateCity(@PathVariable int id, @RequestBody CityDto newCityDto) {
+	public CityDto updateCity(@PathVariable int id, @RequestBody CityDto newCityDto, @RequestHeader("Authorization") String auth) {
 		City city = modelMapper.map(newCityDto, City.class);		
 		City newCity;
 		try {
+			cityApi.getApiClient().addDefaultHeader("Authorization", auth);
 			newCity = cityApi.updateCity(id, city);
 			return modelMapper.map(newCity, CityDto.class);	
 		} catch (ApiException e) {
